style: fix logo size in navbar to prevent overflow

--- a/styles.css
+++ b/styles.css
@@ -391,18 +391,14 @@ h3 span {
 }
 
 .logo-img {
-  height: 160px;
+  height: 80px;
   width: auto;
   object-fit: contain;
-  margin-top: -50px;
-  margin-bottom: -50px;
   transition: var(--transition);
 }
 
 .navbar.scrolled .logo-img {
-  height: 110px;
-  margin-top: -30px;
-  margin-bottom: -30px;
+  height: 60px;
 }
 
 .nav-links {
